Login Screen and UserInfo details saved

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
         </activity>
 
         <activity
+            android:name=".appSingMe2.mBase.BaseActivity">
+        </activity>
+
+        <activity
             android:name=".appSingMe2.mLogin.LoginActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
